--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.13",
     "@hookform/resolvers": "^2.9.10",
     "axios": "^1.1.3",
     "next": "13.0.0",
