--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@hookform/resolvers": "^2.9.10",
     "axios": "^1.1.3",
     "next": "13.0.0",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
     "react-icons": "^4.7.1",
+    "swr": "^2.0.1",
     "uuid": "^9.0.0",
     "yup": "^0.32.11"
   },
